<resources>
    <string name="app_name">Daily Expense</string>
    <string name="add_word">Add Expense</string>
    <string name="expense_type"> Expense Type</string>
    <string name="expense_Amount">Amount </string>
    <string name="button_save">Add </string>
    <string name="empty_not_saved">Please add all fields</string>
    <string name="added_success_msg">Expense Added Success fully</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Reports</string>
    <string name="title_dashboard">Expense</string>
    <string name="title_notifications">Wallet</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="input_expense_details">Add Expense Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="label_back">Back</string>

    <!-- Onboarding -->
    <string name="choose_topics_that_interest_you">Choose topics that interest you</string>
    <string name="label_continue_to_courses">Continue to courses</string>
    <string name="label_profile">Profile</string>
    <string name="label_settings">Settings</string>

    <!-- Courses -->
    <string name="my_courses">My Courses</string>
    <string name="featured">Featured</string>
    <string name="search">Search</string>
    <string name="course_step_steps">%1$d / %2$d</string>
    <string name="label_expand_lessons">Expand lessons sheet</string>
    <string name="label_collapse_lessons">Collapse lessons sheet</string>

    <!--sample data-->
    <string name="course_desc">This video course introduces the photography of structures, including urban and rural buildings, monuments, and less traditional structures. Instruction includes the handling of equipment and methods used to capture building interiors and exteriors. The discussion will be about the handling of distortion, varied light sources, and perspective.</string>
    <string name="what_you_ll_need">What You\'ll Need:</string>
    <string name="you_ll_also_like">You\'ll Also Like</string>
    <string name="needs">• DSLR or manual camera\n• 24mm wide angle lens\n• Tripod</string>
    <string name="step_0">Identify the right aperture for your scene\'s depth of field to achieve the best clarity. Use a narrower aperture so that the entire scene remains in focus.</string>
    <string name="step_1">Frame the subject of your landscape by making use of the lines and angles present in your scene. Look out for curves, textures, triangles, thirds, and other shapes that improve your composition.</string>
    <string name="step_2">Find the time of the day with the best light conditions for your scene. Balance the light sources in your composition so that both light and shadows are present, adding depth, texture, and scale to your landscape.</string>


    <string name="expense">Expense</string>
    <string name="expense_list">list</string>
    <string name="settings">settings</string>
    <string name="delete">delete\n</string>
</resources>
