<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/signUpFragment">

    <fragment
        android:id="@+id/expenseFragment"
        android:name="aaa.app.android.sqlroomsample.fragments.ExpenseFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_expense" />
    <fragment
        android:id="@+id/expenseListFragment"
        android:name="aaa.app.android.sqlroomsample.fragments.ExpenseListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />



    <fragment
        android:id="@+id/navigation_notifications"
        android:name="aaa.app.android.sqlroomsample.fragments.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/signUpFragment"
        android:name="aaa.app.android.sqlroomsample.fragments.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up" />
</navigation>
